--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <article class="about-article">
                 <img src="man.png" alt="">
                 <h5>FULL NAME</h5>
-                <p>Anshu Dhar Dubey</p>
+                <p>Anshu Bhadani</p>
 
             </article>
             <article class="about-article">
